# ChangeLog for app-i18n/prime
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/prime/ChangeLog,v 1.28 2004/06/02 18:56:29 usata Exp $

*prime-0.8.3_rc1 (03 Jun 2004)

  03 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> prime-0.8.3_rc1.ebuild:
  Version bumped

  23 May 2004; Mamoru KOMACHI <usata@gentoo.org> prime-0.8.2-r1.ebuild,
  prime-0.8.2.ebuild:
  Considered stable. Removed old ebuild.

*prime-0.8.2-r1 (18 May 2004)

  18 May 2004; Mamoru KOMACHI <usata@gentoo.org> prime-0.6.7.ebuild,
  prime-0.8.1.ebuild, prime-0.8.2-r1.ebuild, files/prime-0.8.2-uim.diff:
  Applied a patch to fix uim-prime. Removed old ebuilds.

*prime-0.8.2 (01 May 2004)

  01 May 2004; Mamoru KOMACHI <usata@gentoo.org> prime-0.8.0.ebuild,
  prime-0.8.2.ebuild:
  Version bumped. Removed old ebuild

  25 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> prime-0.6.7.ebuild,
  prime-0.8.0.ebuild, prime-0.8.1.ebuild:
  Added to x86 and ~alpha. Don't assign default to S.

  12 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> prime-0.6.7.ebuild,
  prime-0.7.8.ebuild, prime-0.7a-r1.ebuild, prime-0.8.0.ebuild,
  prime-0.8.1.ebuild, files/prime-0.7.a.1.diff:
  virtual/ruby fix. Marked 0.8.0 stable on x86 and removed old development
  versions

*prime-0.8.1 (11 Apr 2004)

  11 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> prime-0.8.1.ebuild:
  Version bumped.

*prime-0.8.0 (30 Mar 2004)

  30 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> prime-0.7a-r1.ebuild,
  prime-0.7a.ebuild, prime-0.8.0.ebuild:
  Version bumped and removed unstable ebuild.
  Marked previous version stable on x86.

  22 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> prime-0.7.8.ebuild:
  Though 0.7.x was intended to be development branch, it seems stable
  enough and worth to unmask (contains a lot of new features).

*prime-0.7a-r1 (08 Mar 2004)

  08 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> prime-0.7a-r1.ebuild,
  files/prime-0.7.a.1.diff: