@@ -1,6 +1,12 @@
 # ChangeLog for app-i18n/prime
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/prime/ChangeLog,v 1.28 2004/06/02 18:56:29 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/prime/ChangeLog,v 1.29 2004/06/06 17:55:24 usata Exp $
+
+*prime-0.8.3 (06 Jun 2004)
+
+  06 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> +prime-0.8.3.ebuild,
+  -prime-0.8.3_rc1.ebuild, +prime-0.9.1.ebuild:
+  Version bumped.
 
 *prime-0.8.3_rc1 (03 Jun 2004)
 
